--- a/site/style.css
+++ b/site/style.css
@@ -14,7 +14,10 @@ body::-webkit-scrollbar {
 header {
     background-color: rgb(20, 20, 20);
     height: 100px;
+    width: 100%;
     padding: 25px;
+    position: fixed;
+    color: white;
 }
 
 .navbar-brand {
@@ -60,6 +63,7 @@ header {
 main{
     height: fit-content;
     padding: 20px;
+    padding-top: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,20 +92,23 @@ footer{
     src: url("./fonts/Gotham.ttf") format("opentype");
 }
 
+@font-face{
+    font-family: Poppins;
+    src: url("./fonts/Poppins-ExtraLight.ttf") format("opentype");
+}
+
 h1{
     font-size: 10rem;
     text-shadow: 0px 0px 10px white;
 }
 
 h2{
-    color:white;
-    padding:20px;
-    margin:0px 10px;
+    margin: 0;
     font-family: ImBatman;
 }
 
 p{
-    font-family: geo sans light;
+    font-family: Poppins;
 }
 
 /* ------------------------------------------------------------ */
@@ -123,11 +130,37 @@ p{
     padding: 20px;
 }
 
-.item{
-    height: fit-content;
+.item {
+    height: 225px;
     width: 70vw;
     background-color: white;
+    display: flex;
+    color: black;
 }
+
+.desc h2 {
+    margin-bottom: 10px;
+}
+
+.desc a{
+    padding: 10px 30px;
+}
+
+#details{
+    width: 45%;
+    padding: 20px;
+    line-height: 150%;
+}
+
+#add{
+    width: 30%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: solid 1px black;
+}
+
 /* ------------------------------------------------------------ */
 @media only screen and (max-width: 800px) {
     body{
