--- a/site/style.css
+++ b/site/style.css
@@ -67,8 +67,8 @@ main{
     font-family: Ailerons;
     flex-wrap: wrap;
     grid-row-gap: 20px;
-    padding: 35px;
-    padding-top: 135px;
+    padding: 20px;
+    padding-top: 120px;
     align-items: center;
 }
 
@@ -112,6 +112,19 @@ p{
     font-family: Poppins;
 }
 
+form{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+label{
+    width: 30%;
+}
+
+input{
+    width: 70%;
+
+}
 /* ------------------------------------------------------------ */
 .termek_button{
     background-color: rgba(0, 0, 0, 0.6);
@@ -172,9 +185,13 @@ p{
     height: 100%
 }
 
+#pay_detail{
+    border-bottom: 2px solid white;
+}
+
 #pay_img{
     width: 100%;
-    height: 30%;
+    aspect-ratio: 16 / 9;
 }
 
 .column{
@@ -182,11 +199,11 @@ p{
 }
 
 #c1{
-    width: 70%;
+    width: 75%;
 }
 
 #c2{
-    width: 30%;
+    width: 25%;
     padding-left: 20px
 }
 
