--- a/site/style.css
+++ b/site/style.css
@@ -66,9 +66,9 @@ main{
     justify-content: center;
     font-family: Ailerons;
     flex-wrap: wrap;
-    grid-row-gap: 20px;
-    padding: 20px;
-    padding-top: 120px;
+    row-gap: 20px;
+    padding: 35px;
+    padding-top: 135px;
     align-items: center;
 }
 
@@ -119,12 +119,20 @@ form{
 
 label{
     width: 30%;
+    font-size: 1.5em;
+    margin-bottom: 30px;
 }
 
 input{
     width: 70%;
-
+    margin-bottom: 30px;
+    height: 30px;
 }
+
+input:last-child{
+    margin: 0;
+}
+
 /* ------------------------------------------------------------ */
 .termek_button{
     background-color: rgba(0, 0, 0, 0.6);
@@ -179,15 +187,27 @@ input{
     background-color: lightblue;
     height: 50%;
     width: 100%;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 #pay_sum{
-    height: 100%
+    height: 100%;
+    justify-content: start;
+    align-items: start;
+    padding: 0;
 }
 
 #pay_detail{
     border-bottom: 2px solid white;
 }
+#pay_form{
+    padding: 10px;
+}
+
 
 #pay_img{
     width: 100%;
