--- a/site/style.css
+++ b/site/style.css
@@ -1,8 +1,9 @@
 body{
     min-height: 100vh;
+    margin: 0; /* Remove default margin */
     background-image: url(./img/placeholder.png);
-    overflow:visible;
-    color:aliceblue;
+    overflow: visible;
+    color: aliceblue;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
 }
@@ -72,14 +73,24 @@ main{
     align-items: center;
 }
 
-footer{
-    position: fixed;
+.bottom_div{
+    position: absolute;
     bottom: 0;
-    height: 20%;
+    height: 20vh;
     width: 100%;
     display: flex;
     align-items:center;
     justify-content: space-between;
+    transition: transform 0.5s ease;
+}
+
+footer {
+    height: 80vh;
+    width: 100%;
+    background: #999;
+    position: absolute;
+    bottom: -80vh;
+    transition: bottom 0.5s ease;
 }
 /* ------------------------------------------------------------ */
 @font-face {
@@ -145,6 +156,22 @@ input:last-child{
     box-shadow:  0px 0px 10px white;
     border-width: 0.37rem;
 } 
+
+.arrow-down {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+    z-index: 9999; /* Ensure the arrow is above other elements */
+    transition: transform 0.3s ease; /* Add transition for smooth rotation */
+}
+
+.arrow-down img {
+    width: 40px; /* Adjust the width as needed */
+    height: auto; /* Ensure aspect ratio is maintained */
+}
+
 /* ------------------------------------------------------------ */
 .down{
     text-align: center;
