--- a/site/style.css
+++ b/site/style.css
@@ -175,6 +175,7 @@ input:last-child{
     height: auto; /* Ensure aspect ratio is maintained */
     transform-origin: center center; /* Set the rotation origin to the center of the image */
     position: absolute; /* Set position to absolute to fix its position */
+    filter: invert(1);
 }
 
 
@@ -186,7 +187,7 @@ input:last-child{
 
 .item {
     height: 225px;
-    width: 70vw;
+    width: 800px;
     background-color: white;
     display: flex;
     color: black;
@@ -263,6 +264,24 @@ input:last-child{
     width: 25%;
     padding-left: 20px
 }
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7); /* Semi-transparent black overlay */
+    z-index: 9999; /* Ensure overlay is on top of other content */
+    text-align: center;
+  }
+  
+  #overlay img {
+    margin-top: 20vh; /* Adjust as needed */
+    max-width: 80%; /* Adjust as needed */
+    max-height: 60vh; /* Adjust as needed */
+  }
 
 /* ------------------------------------------------------------ */
 @media only screen and (max-width: 800px) {
