--- a/site/style.css
+++ b/site/style.css
@@ -221,6 +221,36 @@ input:last-child{
     padding: 20px
 }
 
+.portrait{
+    height: 50vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.portrait_div{
+    width: 15vw;
+    height: 100%;
+    background-color: black;
+}
+
+.portrait_img{
+    height: calc(100%-30px);
+    width: 100%;
+    aspect-ratio: 3 / 4;
+}
+
+figcaption{
+    font-family: Poppins;
+    text-align: center;
+}
+
+.socials{
+    height: 20vh;
+    width: 100%;
+}
+
 /* ------------------------------PRODUCTS.HTML------------------------------ */
 
 .product_main{
@@ -337,6 +367,12 @@ input:last-child{
 .cart_btn { /* Make the button float to the bottom */
     margin:auto;
     margin-bottom: 15%;
+}
+
+/* ------------------------------FINALIZE.HTML------------------------------ */
+
+.finalize_btn{
+    padding: 3% 4%;
 }
 
 /* ------------------------------RESPONSIVE------------------------------ */
